finalizing cpp notebook

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "4d4ec4de",
    "metadata": {},
    "outputs": [],
@@ -81,6 +81,7 @@
     "#include <mlpack/core.hpp>\n",
     "#include <mlpack/methods/linear_regression/linear_regression.hpp>\n",
     "#include <mlpack/core/data/split_data.hpp>\n",
+    "#include <bits/stdc++.h>\n",
     "#define WITHOUT_NUMPY 1\n",
     "#include \"matplotlibcpp.h\"\n",
     "#include \"xwidgets/ximage.hpp\"\n",
@@ -88,6 +89,7 @@
     "#include \"../utils/impute.hpp\"\n",
     "#include \"../utils/pandasscatter.hpp\"\n",
     "#include \"../utils/heatmap.hpp\"\n",
+    "#include \"../utils/plot.hpp\"\n",
     "\n",
     "namespace plt = matplotlibcpp;\n",
     "using namespace mlpack;\n",
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8156f04",
+   "id": "d3ada155",
    "metadata": {},
    "source": [
     "<h3> Let's download the dataset. </h3>"
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "401c6664",
    "metadata": {},
    "outputs": [],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ef053e",
+   "id": "4455b8c2",
    "metadata": {},
    "source": [
     "### Loading the Data\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a782bd5",
+   "id": "3d8c518f",
    "metadata": {},
    "source": [
     "But, there's one thing which we need to do before loading the dataset as armadillo matrix, that is, to deal with any missing values. Since 207 values were removed from the original dataset from \"total_bedrooms_column\", we need to fill them using either \"mean\" or \"median\" of that feature( for numerical) and \"mode\"( for categorical\")."
@@ -131,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4e955a58",
+   "execution_count": 49,
+   "id": "8f953059",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +143,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577ba59e",
+   "id": "c44b68cf",
    "metadata": {},
    "source": [
     "Let's drop the headers using sed. Sed is a unix utility which is used to parse and transform text."
@@ -166,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "33712368",
+   "execution_count": 50,
+   "id": "0a4da26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "d2e2c3f4",
    "metadata": {},
    "outputs": [],
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "choice-victor",
    "metadata": {},
    "outputs": [
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96df744b",
+   "id": "6d337702",
    "metadata": {},
    "source": [
     "Did you notice something? Yes, the last row looks like it is entirely filled with '0'. Let's check our dataset to see what it corresponds to.\n",
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "d6969aa9",
    "metadata": {},
    "outputs": [],
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fde404b",
+   "id": "5eb2326a",
    "metadata": {},
    "source": [
     "Here, we chose our pre-built encoding method \"One Hot Encoding\" to deal with the categorical values."
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "8bad850e",
    "metadata": {},
    "outputs": [
@@ -262,7 +264,7 @@
        "14"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff425e8",
+   "id": "f0f76071",
    "metadata": {},
    "source": [
     "<h3>Visualization</h3>"
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81e9d91",
+   "id": "918a023a",
    "metadata": {},
    "source": [
     "Let's plot a histogram. "
@@ -289,22 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "880dcc3b",
+   "execution_count": 8,
+   "id": "d5881f45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce1b4f6af8704ef789e83d02f40912fe",
+       "model_id": "5c0dd57a133c4ecca91802380f610915",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: ce1b4f6af8704ef789e83d02f40912fe"
+       "A Jupyter widget with unique id: 5c0dd57a133c4ecca91802380f610915"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49be1439",
+   "id": "3c74d711",
    "metadata": {},
    "source": [
     "Let's plot a scatter plot with longitude and latitude as x and y coordinates respectively."
@@ -326,22 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "54c2a0ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f04b24e890145b7a00ac141061f869c",
+       "model_id": "f938371980f045b4b47b190bdc1dd973",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 3f04b24e890145b7a00ac141061f869c"
+       "A Jupyter widget with unique id: f938371980f045b4b47b190bdc1dd973"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41285286",
+   "id": "aa065eb7",
    "metadata": {},
    "source": [
     "Let's add some colour to the scatter plot."
@@ -363,22 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3fef937e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c97f2af1daab4fb3b8156d9acbd0de22",
+       "model_id": "dba3ae5c957d4dc7b5025a32e20bed52",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: c97f2af1daab4fb3b8156d9acbd0de22"
+       "A Jupyter widget with unique id: dba3ae5c957d4dc7b5025a32e20bed52"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad801c7",
+   "id": "99694c2d",
    "metadata": {},
    "source": [
     "Let's take it a step further and plot this on top of California map."
@@ -400,22 +402,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5d22bf50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d4a124d1ff94408a24612c9fc775313",
+       "model_id": "10408985977f4b25b0332df8a43f7081",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 3d4a124d1ff94408a24612c9fc775313"
+       "A Jupyter widget with unique id: 10408985977f4b25b0332df8a43f7081"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ffb81d",
+   "id": "8c150477",
    "metadata": {},
    "source": [
     "<h3>Correlation</h3>"
@@ -437,36 +439,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1ad5adcf",
+   "execution_count": 57,
+   "id": "7cd3d78d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe9a6ff08f17439c862f3d96b28e9d62",
+       "model_id": "853e9346dae6437aa87ca0d5acfe519f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: fe9a6ff08f17439c862f3d96b28e9d62"
+       "A Jupyter widget with unique id: 853e9346dae6437aa87ca0d5acfe519f"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// HeatMap(inFile, width, height, outFile);\n",
-    "HeatMap(\"housing.csv\", 15, 10, \"heatmap.png\");\n",
-    "auto img = xw::image_from_file(\"heatmap.png\").finalize();\n",
+    "heatmap(\"housing.csv\", \"coolwarm\", \"Correlation Heatmap\", true);\n",
+    "auto img = xw::image_from_file(\"Correlation Heatmap.png\").finalize();\n",
     "img"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63e53b3a",
+   "id": "3d32757f",
    "metadata": {},
    "source": [
     "<h3>Train-Test Split</h3>\n",
@@ -475,12 +476,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "chubby-water",
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Labels are the last row.\n",
+    "// Labels are median_house_value which is row 8\n",
     "arma::rowvec labels =\n",
     "    arma::conv_to<arma::rowvec>::from(encoded_dataset.row(8));\n",
     "encoded_dataset.shed_row(8);"
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "vital-lebanon",
    "metadata": {},
    "outputs": [],
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "ruled-refrigerator",
    "metadata": {},
    "outputs": [],
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad7dc4c",
+   "id": "bab01601",
    "metadata": {},
    "source": [
     "### Training the linear model\n",
@@ -525,19 +526,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "chemical-inside",
    "metadata": {},
    "outputs": [],
    "source": [
     "using namespace mlpack::regression;\n",
-    "LinearRegression lr(trainSet, trainLabels, 0.0);\n",
+    "LinearRegression lr(trainSet, trainLabels, 0.5);\n",
     "// The above line creates and train the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "sensitive-sociology",
    "metadata": {},
    "outputs": [],
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "empty-senator",
    "metadata": {},
    "outputs": [],
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "circular-donna",
    "metadata": {},
    "outputs": [
@@ -567,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.57188e+09"
+      "4.74874e+09"
      ]
     }
    ],
@@ -577,15 +578,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ad00b6",
+   "id": "4ba89a8f",
    "metadata": {},
    "source": [
-    "Let's manually check predictions."
+    "Let's manually check some predictions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "id": "laden-drawing",
    "metadata": {},
    "outputs": [
@@ -593,33 +594,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101100\n",
-      "133043\n"
+      "174300\n",
+      "190507\n"
      ]
     }
    ],
    "source": [
-    "std::cout<<testLabels[1] << std:: endl;\n",
-    "std::cout<<output[1]<<std::endl;"
+    "std::cout << testLabels[1] << std::endl;\n",
+    "std::cout << output[1] << std::endl;"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8e89fc0a",
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "01849ec9",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "170500\n",
+      "203024\n"
+     ]
+    }
+   ],
+   "source": [
+    "std::cout << testLabels[7] << std::endl;\n",
+    "std::cout << output[7] << std::endl;"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6832c96d",
+   "execution_count": 40,
+   "id": "f99b7099",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arma::mat preds;\n",
+    "preds.insert_rows(0, testLabels);\n",
+    "preds.insert_rows(1, output);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0adaac15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlpack::data::Save(\"preds.csv\", preds);"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e4f4f11",
+   "id": "600f2f3f",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation\n",
+    "Test data is visualized with `testLables` and `output`, the blue points indicates the data points and the blue line indicates the regression line or best fit line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "810f1836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e350347bea84528bfc8ad34775eff1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 2e350347bea84528bfc8ad34775eff1b"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lmplot(\"predictions.csv\", \"predsScatter\");\n",
+    "auto img = xw::image_from_file(\"predsScatter.png\").finalize();    \n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "11a44e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "739a2b0617ff402ab08664e833fb9339",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 739a2b0617ff402ab08664e833fb9339"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "histplot(\"predictions.csv\", \"Distribution of residuals\");\n",
+    "auto img = xw::image_from_file(\"Distribution of residuals.png\").finalize();    \n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4f1df6",
    "metadata": {},
    "source": [
     "## Evaluation Metrics for Regression model\n",
@@ -636,17 +730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "494e5aa4",
+   "execution_count": 44,
+   "id": "240d935d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 52030\n",
-      "Mean Squared Error: 5.34685e+09\n",
-      "Root Mean Squared Error: 73122.2\n"
+      "Mean Absolute Error: 49434.7\n",
+      "Mean Squared Error: 4.78e+09\n",
+      "Root Mean Squared Error: 69137.5\n"
      ]
     }
    ],
@@ -659,12 +753,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a990e1c0",
+   "cell_type": "markdown",
+   "id": "76f0a28e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can clearly see that the MAE is 49674, when compared with the median house value doesn't seems to be a good fit. \n",
+    "\n",
+    "Thus we can conclude that, the simple Linear Regression models is not being able to catch all the features.\n",
+    "So, maybe its time for you to try other algorithms. \n",
+    "<h5>NOTE : </h5> In the entire ML workflow, you never know exactly which model will perfrom the best. So, usually you try a lot of different algorithms to see which fits the model."
+   ]
   }
  ],
  "metadata": {
