fixed style issues

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "4d4ec4de",
    "metadata": {},
    "outputs": [],
@@ -81,10 +81,13 @@
     "#include <mlpack/core.hpp>\n",
     "#include <mlpack/methods/linear_regression/linear_regression.hpp>\n",
     "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <bits/stdc++.h>\n",
-    "#define WITHOUT_NUMPY 1\n",
+    "\n",
     "#include \"matplotlibcpp.h\"\n",
+    "#define WITHOUT_NUMPY 1\n",
     "#include \"xwidgets/ximage.hpp\"\n",
+    "\n",
+    "/* CPython Scripts for Plots\" */\n",
+    "\n",
     "#include \"../utils/histogram.hpp\"\n",
     "#include \"../utils/impute.hpp\"\n",
     "#include \"../utils/pandasscatter.hpp\"\n",
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ada155",
+   "id": "d3772daa",
    "metadata": {},
    "source": [
     "<h3> Let's download the dataset. </h3>"
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "401c6664",
    "metadata": {},
    "outputs": [],
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4455b8c2",
+   "id": "ccfec1a3",
    "metadata": {},
    "source": [
     "### Loading the Data\n",
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8c518f",
+   "id": "3876fd0c",
    "metadata": {},
    "source": [
     "But, there's one thing which we need to do before loading the dataset as armadillo matrix, that is, to deal with any missing values. Since 207 values were removed from the original dataset from \"total_bedrooms_column\", we need to fill them using either \"mean\" or \"median\" of that feature( for numerical) and \"mode\"( for categorical\")."
@@ -134,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8f953059",
+   "id": "1158fb23",
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +157,12 @@
     "// Here, inputFile is our raw file, outputFile is our new file with the imputations, \n",
     "// and kind refers to imputation method.\n",
     "\n",
-    "Impute(\"housing.csv\", \"housing_imputed.csv\", \"median\");\n",
-    "\n"
+    "Impute(\"housing.csv\", \"housing_imputed.csv\", \"median\");"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c44b68cf",
+   "id": "31660f05",
    "metadata": {},
    "source": [
     "Let's drop the headers using sed. Sed is a unix utility which is used to parse and transform text."
@@ -169,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0a4da26c",
+   "id": "a7646cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d337702",
+   "id": "ea15e0f2",
    "metadata": {},
    "source": [
     "Did you notice something? Yes, the last row looks like it is entirely filled with '0'. Let's check our dataset to see what it corresponds to.\n",
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb2326a",
+   "id": "87bab429",
    "metadata": {},
    "source": [
     "Here, we chose our pre-built encoding method \"One Hot Encoding\" to deal with the categorical values."
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f76071",
+   "id": "b1d43611",
    "metadata": {},
    "source": [
     "<h3>Visualization</h3>"
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918a023a",
+   "id": "491e3ed1",
    "metadata": {},
    "source": [
     "Let's plot a histogram. "
@@ -292,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5881f45",
+   "id": "32538bc9",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c74d711",
+   "id": "8be0a961",
    "metadata": {},
    "source": [
     "Let's plot a scatter plot with longitude and latitude as x and y coordinates respectively."
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa065eb7",
+   "id": "f4e69bd4",
    "metadata": {},
    "source": [
     "Let's add some colour to the scatter plot."
@@ -365,28 +367,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "3fef937e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dba3ae5c957d4dc7b5025a32e20bed52",
+       "model_id": "8177cbf69b104cfeb24cbea0475693ae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: dba3ae5c957d4dc7b5025a32e20bed52"
+       "A Jupyter widget with unique id: 8177cbf69b104cfeb24cbea0475693ae"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "//PandasScatterColor(inputFile, x, y, label, c, outputFile);\n",
+    "//PandasScatterColor(inputFile, x, y, label, c, outputFile)\n",
     "PandasScatterColor(\"housing.csv\",\"longitude\",\"latitude\",\"Population\",\"median_house_value\",\"output1.png\");\n",
     "auto im = xw::image_from_file(\"output1.png\").finalize();\n",
     "im"
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99694c2d",
+   "id": "13d9f1f4",
    "metadata": {},
    "source": [
     "Let's take it a step further and plot this on top of California map."
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c150477",
+   "id": "6b497acc",
    "metadata": {},
    "source": [
     "<h3>Correlation</h3>"
@@ -439,35 +441,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "7cd3d78d",
+   "execution_count": 2,
+   "id": "c94b859b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "853e9346dae6437aa87ca0d5acfe519f",
+       "model_id": "98d1a64dbd0947d78f0f8e276debab93",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 853e9346dae6437aa87ca0d5acfe519f"
+       "A Jupyter widget with unique id: 98d1a64dbd0947d78f0f8e276debab93"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heatmap(\"housing.csv\", \"coolwarm\", \"Correlation Heatmap\", true);\n",
-    "auto img = xw::image_from_file(\"Correlation Heatmap.png\").finalize();\n",
-    "img"
+    "HeatMap(\"housing.csv\", \"heatmap.png\");\n",
+    "auto im = xw::image_from_file(\"heatmap.png\").finalize();\n",
+    "im"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d32757f",
+   "id": "b2a48f41",
    "metadata": {},
    "source": [
     "<h3>Train-Test Split</h3>\n",
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab01601",
+   "id": "38f7fc6e",
    "metadata": {},
    "source": [
     "### Training the linear model\n",
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba89a8f",
+   "id": "f7a08000",
    "metadata": {},
    "source": [
     "Let's manually check some predictions."
@@ -607,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "01849ec9",
+   "id": "db4fbc08",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f99b7099",
+   "id": "6f1608ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0adaac15",
+   "id": "bb850bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600f2f3f",
+   "id": "a31c2021",
    "metadata": {},
    "source": [
     "### Model Evaluation\n",
@@ -658,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "810f1836",
+   "id": "24862345",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +680,7 @@
     }
    ],
    "source": [
-    "lmplot(\"predictions.csv\", \"predsScatter\");\n",
+    "lmplot(\"predis.csv\", \"predsScatter\");\n",
     "auto img = xw::image_from_file(\"predsScatter.png\").finalize();    \n",
     "img"
    ]
@@ -686,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "11a44e68",
+   "id": "0767c987",
    "metadata": {},
    "outputs": [
     {
@@ -707,13 +709,13 @@
    ],
    "source": [
     "histplot(\"predictions.csv\", \"Distribution of residuals\");\n",
-    "auto img = xw::image_from_file(\"Distribution of residuals.png\").finalize();    \n",
+    "auto img = xw::image_from_file(\"Distribution of residuals.png\").finalize();\n",
     "img"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d4f1df6",
+   "id": "3f97dac8",
    "metadata": {},
    "source": [
     "## Evaluation Metrics for Regression model\n",
@@ -731,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "240d935d",
+   "id": "21413c7d",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76f0a28e",
+   "id": "82d8647b",
    "metadata": {},
    "source": [
     "We can clearly see that the MAE is 49674, when compared with the median house value doesn't seems to be a good fit. \n",
