added book link in notebook

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -14,7 +14,7 @@
     "### About the Data\n",
     " This dataset is a modified version of the California Housing dataset available from Luís Torgo's page (University of Porto). Luís Torgo obtained it from the StatLib repository (which is closed now). The dataset may also be downloaded from StatLib mirrors.\n",
     " \n",
-    " This dataset is also used in a book HandsOn-ML ( a very good book and highly recommended).\n",
+    " This dataset is also used in a book HandsOn-ML (a very good book and highly recommended)[ https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/].\n",
     " \n",
     " The dataset in this directory is almost identical to the original, with two differences:\n",
     "207 values were randomly removed from the totalbedrooms column, so we can discuss what to do with missing data. An additional categorical attribute called oceanproximity was added, indicating (very roughly) whether each block group is near the ocean, near the Bay area, inland or on an island. This allows discussing what to do with categorical data.\n",
