Use the gif util. Working 100%

--- a/portfolio_optimization/portfolio-optimization-cpp.ipynb
+++ b/portfolio_optimization/portfolio-optimization-cpp.ipynb
@@ -30,7 +30,9 @@
     "#include <mlpack/xeus-cling.hpp>\n",
     "\n",
     "#include <ensmallen.hpp>\n",
-    "#include \"../utils/portfolio.hpp\""
+    "#include \"../utils/portfolio.hpp\"\n",
+    "#include \"../utils/front.hpp\"\n",
+    "#include <ctime>"
    ]
   },
   {
@@ -69,6 +71,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Download backup data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2021-07-06 12:00:05--  http://lab.mlpack.org/data/portfolio.csv\n",
+      "Resolving lab.mlpack.org (lab.mlpack.org)... 95.216.240.218\n",
+      "Connecting to lab.mlpack.org (lab.mlpack.org)|95.216.240.218|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 119324 (117K) [application/octet-stream]\n",
+      "Saving to: ‘portfolio.csv.2’\n",
+      "\n",
+      "     0K .......... .......... .......... .......... .......... 42%  326M 0s\n",
+      "    50K .......... .......... .......... .......... .......... 85%  523M 0s\n",
+      "   100K .......... ......                                     100%  467M=0s\n",
+      "\n",
+      "2021-07-06 12:00:05 (410 MB/s) - ‘portfolio.csv.2’ saved [119324/119324]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget http://lab.mlpack.org/data/portfolio.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Set the Model Parameters"
    ]
   },
@@ -81,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "startDate = \"01/01/2015\";\n",
+    "startDate = \"03/08/2018\";\n",
     "\n",
     "//! Uncomment to set custom start-date.\n",
     "// std::cout << \"Starting Date (YYYY/MM/DD or DD/MM/YYYY)\" << std::endl;\n",
@@ -135,16 +173,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the current date."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "endDate = \"31/12/2019\";\n",
+    "time_t current_time;\n",
+    "struct tm *timeinfo;\n",
+    "time(&current_time);\n",
+    "\n",
+    "timeinfo = localtime(&current_time);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size_t day = timeinfo->tm_mday;\n",
+    "size_t month = timeinfo->tm_mon + 1;\n",
+    "size_t year = timeinfo->tm_year + 1900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::stringstream dateToday;\n",
+    "dateToday << day << \"/\" << month << \"/\" << year;\n",
+    "\n",
+    "endDate = dateToday.str();\n",
     "\n",
     "//! Uncomment to set custom end-date.\n",
     "// std::cout << \"End Date (YYYY/MM/DD or DD/MM/YYYY)\" << std::endl;\n",
     "// std::cin >> endDate;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//! Uncomment to generate the csv file\n",
+    "//! if(Portfolio(stocks, dataSource, startDate, endDate,\"portfolio.csv\"))\n",
+    "//!    std::cout << \"Data query failed! Using backup csv.\" << std::endl;"
    ]
   },
   {
@@ -163,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +258,6 @@
     "                      const std::string& startDate,\n",
     "                      const std::string& endDate)\n",
     "    {\n",
-    "     //! Generate the requested csv file.\n",
-    "      Portfolio(stocks, dataSource, startDate, endDate,\"portfolio.csv\");\n",
     "      returns.load(\"portfolio.csv\", arma::csv_ascii);\n",
     "      returns.shed_col(0);\n",
     "\n",
@@ -238,7 +319,7 @@
     "const double upperBound = 1;\n",
     "\n",
     "DefaultMOEAD moead(150, // Population size.\n",
-    "                   300,  // Max generations.\n",
+    "                   30,  // Max generations.\n",
     "                   1.0,  // Crossover probability.\n",
     "                   0.9, // Probability of sampling from neighbor.\n",
     "                   20, // Neighborhood size.\n",
@@ -251,7 +332,7 @@
     "                 );\n",
     "\n",
     "NSGA2 nsga2(150, // population size: The number of candidates in the population.\n",
-    "            300, // max generations: The maximum number of generations allowed.\n",
+    "            30, // max generations: The maximum number of generations allowed.\n",
     "            0.5, // crossover probability: The probability that the elites reproduce.\n",
     "            0.5, // mutation  probability: The probability of mutation among the elite.\n",
     "            1e-3, // mutation strength: The strength of the mutation.\n",
@@ -312,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,16 +442,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "size_t numQuery = 300 / 2; // maxGeneration / queryRate.\n",
-    "\n",
-    "std::vector<std::vector<double>> nsga2FrontArrayX(numQuery);\n",
-    "std::vector<std::vector<double>> nsga2FrontArrayY(numQuery);\n",
-    "std::vector<std::vector<double>> moeadFrontArrayX(numQuery);\n",
-    "std::vector<std::vector<double>> moeadFrontArrayY(numQuery);"
+    "std::stringstream nsga2FrontsX, nsga2FrontsY, moeadFrontsX, moeadFrontsY;"
    ]
   },
   {
@@ -382,42 +458,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "void FillFront(std::vector<double>& frontX,\n",
-    "               std::vector<double>& frontY,\n",
-    "               arma::cube& paretoFront)\n",
+    "void FillFront(std::stringstream& frontX,\n",
+    "               std::stringstream& frontY,\n",
+    "               std::vector<arma::cube>& frontList)\n",
     "{\n",
-    "    size_t numPoints = paretoFront.n_slices;\n",
-    "\n",
-    "    //! Store the X, Y coordinates of the Pareto Front.\n",
-    "    frontX.resize(numPoints);\n",
-    "    frontY.resize(numPoints);\n",
-    "\n",
-    "    for (size_t idx = 0; idx < numPoints; ++idx)\n",
+    "    size_t numFronts = frontList.size();\n",
+    "    \n",
+    "    for (size_t frontIdx = 0; frontIdx < numFronts; ++frontIdx)\n",
     "    {\n",
-    "\n",
-    "        frontX[idx] = paretoFront.slice(idx)(0);\n",
-    "        // Append negative again to restore the original \n",
-    "        // maximization objective.\n",
-    "        frontY[idx] = -paretoFront.slice(idx)(1);\n",
+    "        size_t numPoints = frontList[frontIdx].n_slices;\n",
+    "        const arma::cube& front = frontList[frontIdx];\n",
+    "        for (size_t pointIdx = 0; pointIdx < numPoints; ++pointIdx)\n",
+    "        {\n",
+    "            if (pointIdx == numPoints - 1)\n",
+    "            {\n",
+    "                 frontX << front.slice(pointIdx)(0);\n",
+    "                 frontY << -front.slice(pointIdx)(1);\n",
+    "            }\n",
+    "            else\n",
+    "            {\n",
+    "                frontX << front.slice(pointIdx)(0) << \",\";\n",
+    "                // Append negative again to restore the original \n",
+    "                // maximization objective.\n",
+    "                frontY << -front.slice(pointIdx)(1) << \",\";\n",
+    "            }\n",
+    "        }\n",
+    "    \n",
+    "        if (frontIdx == numFronts - 1) break;  \n",
+    "        \n",
+    "        frontX << \";\";\n",
+    "        frontY << \";\";   \n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (size_t idx = 0; idx < numQuery; ++idx)\n",
-    "{\n",
-    "    FillFront(nsga2FrontArrayX[idx], nsga2FrontArrayY[idx], nsga2Fronts[idx]);\n",
-    "    FillFront(moeadFrontArrayX[idx], moeadFrontArrayY[idx], moeadFronts[idx]);\n",
-    "}"
+    "FillFront(nsga2FrontsX, nsga2FrontsY, nsga2Fronts);\n",
+    "FillFront(moeadFrontsX, moeadFrontsY, moeadFronts);"
    ]
   },
   {
@@ -444,48 +530,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "768c3158a3524ef09e9fc4bcf64ba9db",
+       "model_id": "ebff7484ce8d4a20ad9df79112f4f5eb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 768c3158a3524ef09e9fc4bcf64ba9db"
+       "A Jupyter widget with unique id: ebff7484ce8d4a20ad9df79112f4f5eb"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plt::figure_size(1500, 700);\n",
-    "plt::suptitle(\"Pareto Front Evolution of NSGA-II and MOEAD\");\n",
-    "plt::subplot(1, 2, 1);\n",
+    "//! A util to plot the evolution process gif.\n",
+    "Front(nsga2FrontsX.str(), nsga2FrontsY.str(), moeadFrontsX.str(), moeadFrontsY.str());\n",
     "\n",
-    "for (size_t idx = 0; idx < numQuery; ++idx)\n",
-    "    plt::scatter(nsga2FrontArrayX[idx], nsga2FrontArrayY[idx], 50);\n",
-    "\n",
-    "plt::xlabel(\"Volatility\");\n",
-    "plt::ylabel(\"Returns\");\n",
-    "plt::title(\"NSGA-II\");\n",
-    "\n",
-    "plt::subplot(1, 2, 2);\n",
-    "for (size_t idx = 0; idx < numQuery; ++idx)\n",
-    "    plt::scatter(moeadFrontArrayX[idx], moeadFrontArrayY[idx], 50);\n",
-    "\n",
-    "plt::xlabel(\"Volatility\");\n",
-    "plt::ylabel(\"Returns\");\n",
-    "plt::title(\"MOEA/D-DE\");\n",
-    "\n",
-    "\n",
-    "plt::save(\"./plot.png\");\n",
-    "auto im = xw::image_from_file(\"plot.png\").finalize();\n",
+    "auto im = xw::image_from_file(\"fronts.gif\").finalize();\n",
     "im"
    ]
   },
