--- a/portfolio_optimization/portfolio-optimization-cpp.ipynb
+++ b/portfolio_optimization/portfolio-optimization-cpp.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//! Uncomment to generate the csv file\n",
+    "//! Uncomment to generate the csv file.\n",
     "//! if(Portfolio(stocks, dataSource, startDate, endDate,\"portfolio.csv\"))\n",
     "//!    std::cout << \"Data query failed! Using backup csv.\" << std::endl;"
    ]
